fixing details page display on mobile

--- a/stylesd.css
+++ b/stylesd.css
@@ -109,7 +109,7 @@
 
   .title img {
     margin-top: 20px;
-    width: 450px;
+    width: 400px;
     height: 400px;
   }
   
@@ -118,7 +118,7 @@
     margin-bottom: 40px;
     font-size: 20px;
     gap: 10px;
-    width: 450px;
+    width: 400px;
   }
 
   .more p {
